syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/customer";


message RefreshTokenCustomerRequest{
    string refresh_token = 1;
}

message RefreshTokenCustomerResponse {
    string access_token = 1;
    google.protobuf.Timestamp access_token_expires_at =2;
    string refresh_token = 3; 
    google.protobuf.Timestamp  refresh_token_expires_at = 4;
}
